# gst-siddecfp

./: README.md  gstreamer.patch  meson.build  meson.options
gst-app/: meson.build
gst-app/src/: play.c  typefind-hack.c  typefind-hack.h
gst-plugin/: gstsiddecfp.cc  gstsiddecfp.h  meson.build
